--- a/home.css
+++ b/home.css
@@ -47,7 +47,7 @@ header {
 
 @media screen and (min-width: 320px) {
     header {
-        height: 40vh;
+        height: 200px;
     }
     .main-header {
         font-size: 20px;
