--- a/home.css
+++ b/home.css
@@ -45,7 +45,7 @@ header {
 
 /* media start */
 
-@media screen and (min-width: 320px) {
+@media screen and (min-width: 375px) {
     header {
         height: 200px;
     }
@@ -66,30 +66,9 @@ header {
         margin-top: 20px;
     }
 }
-@media screen and (min-width: 375px) {
-    header {
-        height: 40vh;
-    }
-    .main-header {
-        font-size: 20px;
-        letter-spacing: 0;
-    }
-    .main-header-short {
-        margin-top: -20px;
-        font-size: 20px;
-    }
-    .sub-header {
-        font-size: 10px;
-        margin-top: -20px;
-    }
-    .main-logo {
-        height: 40%;
-        margin-top: 20px;
-    }
-}
 @media screen and (min-width: 425px) {
     header {
-        height: 40vh;
+        height: 200px;
     }
     .main-header {
         font-size: 20px;
@@ -105,12 +84,13 @@ header {
     }
     .main-logo {
         height: 50%;
-        margin-top: 20px;
+        margin-top: 10px;
     }
 }
 @media screen and (min-width: 768px) {
     header {
-        height: 50vh;
+        height: 300px;
+        padding-top: 20px;
     }
     .main-header {
         font-size: 30px;
@@ -125,13 +105,13 @@ header {
         margin-top: -20px;
     }
     .main-logo {
-        height: 50%;
+        height: 60%;
         margin-top: 40px;
     }
 }
 @media screen and (min-width: 1024px) {
     header {
-        height: 50vh;
+        height: 350px;
     }
     .main-header {
         font-size: 40px;
@@ -153,7 +133,7 @@ header {
 @media screen and (min-width: 1440px) {
     header {
         padding-top: 20px;
-        height: 60vh;
+        height: 350px;
     }
     .main-header {
         font-size: 40px;
